may have fixed misalignment

--- a/frontend/src/components/FloatingButton.css
+++ b/frontend/src/components/FloatingButton.css
@@ -56,7 +56,7 @@
   }
   
   .floating-button:hover .arrow {
-    transform: rotate(0);
+    transform: translate(0px, -0.75rem) rotate(0) scale(1.75);
   }
   
   .circular-text-hover, .circular-text-static {
